notepadpp 8.8.9-42:
	* product update --> 8.8.9
	* Installer with NOUPDATER parameter
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-12-10 22:17:24 +0100

notepadpp 8.8.8-41:
	* product update --> 8.8.8
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-11-22 00:03:12 +0100

notepadpp 8.8.7-41:
	* product update --> 8.8.7
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-10-21 07:12:55 +0200

notepadpp 8.8.6-41:
	* product update --> 8.8.6
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-10-08 08:58:16 +0200

notepadpp 8.8.5-41:
	* product update --> 8.8.5
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-08-14 07:50:10 +0200

notepadpp 8.8.3-41:
	* hotfix for 8.5.1 removed
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-07-10 07:09:35 +0200

notepadpp 8.8.3-40:
	* product update --> 8.8.3
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-07-10 07:09:35 +0200

notepadpp 8.8.2-40:
	* product update --> 8.8.2
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-07-04 10:27:07 +0200

notepadpp 8.8.1-40:
	* product update --> 8.8.1
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-05-06 08:55:57 +0200

notepadpp 8.8-40:
	* product update --> 8.8
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-04-29 06:33:24 +0200

notepadpp 8.7.9-40:
	* product update --> 8.7.9
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-04-03 07:14:23 +0200

notepadpp 8.7.8-40:
	* product update --> 8.7.8
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-03-11 07:11:16 +0100

notepadpp 8.7.7-40:
	* product update --> 8.7.7
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-02-10 08:18:36 +0100

notepadpp 8.7.6-40:
	* product update --> 8.7.6
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-01-28 14:08:06 +0100

notepadpp 8.7.5-40:
	* product update --> 8.7.5
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2025-01-02 07:30:58 +0100

notepadpp 8.7.4-40:
	* product update --> 8.7.4
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2024-12-05 13:08:06 +0100

notepadpp 8.7.3-40:
	* product update --> 8.7.3